--- a/volandouy oficial/src/main/webapp/assets/css/styles.css
+++ b/volandouy oficial/src/main/webapp/assets/css/styles.css
@@ -1,32 +1,29 @@
 .page-bg{
-  min-height: 85vh;
+  height: clamp(520px, 86svh, 720px);
+  display: grid !important;        /* forzamos grid sobre d-flex */
+  place-items: center;
+  padding-top: 0 !important;       /* neutralizamos py-5 */
+  padding-bottom: 0 !important;
 
-  /* 1) degradado  2) imagen */
-  background-image:
-    linear-gradient(180deg, rgba(0,0,0,.08), rgba(0,0,0,.18)),
+  background:
+    linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.35)),
     url("../img/avioncito2.jpg");
-
-  /* que ambas capas no se repitan */
   background-repeat: no-repeat, no-repeat;
-
-  /* posiciones de cada capa (degradado centrado, imagen centrada un poco alta) */
-  background-position: center, center 20%;
-
-  /* 🔽 acá achicás la imagen:
-     - el degradado ocupa todo (100% 100%)
-     - la imagen mide 60vw de ancho y alto automático */
-  background-size: 100% 100%, 100vw auto;
-
-  /* opcional: que la imagen se quede fija al hacer scroll */
-  background-attachment: scroll, fixed; 
+  background-position: center center, center 37%;
+  background-size: 100% 100%, cover;
 }
 
-/* Ajuste para celus: que no quede demasiado grande */
-@media (max-width: 576px){
+.page-bg .row{ margin-top: 0 !important; }
+
+/* Ajuste para celus: que no quede demasiado grande  SI QUIERO QUE AL ACHICAR SE AJUSTE LA IMAGEN PARA VER
+/*@media (max-width: 576px){
   .page-bg{
     background-size: 100% 100%, contain;
-    background-position: center, center 10%;
+    background-position: center center, center 10%;
   }
+}*/
+@media (min-width: 1400px){
+  .page-bg .col-lg-6{ max-width: 600px; }
 }
 
 .btn-panel{
