--- a/volandouy oficial/src/main/webapp/assets/css/styles.css
+++ b/volandouy oficial/src/main/webapp/assets/css/styles.css
@@ -150,3 +150,10 @@ body.index-page, body.registro-page { padding-top: 56px; }
   background-color: #0d6efd;
   border-color: #0d6efd;
 }
+
+h1.display-6 {
+  color: #007bff; /* Cambia el color */
+  font-weight: bold; /* Negrita */
+  text-shadow: 1px 1px 4px #00000033; /* Sombra sutil */
+  /* Otros estilos que desees */
+}
