Crear Paquete de Rutas de Vuelo

--- a/volandouy oficial/src/main/webapp/assets/css/styles.css
+++ b/volandouy oficial/src/main/webapp/assets/css/styles.css
@@ -41,7 +41,8 @@
 .cat-page .navbar-compact,
 .ciudad-page .navbar-compact,
 .regVuelo-page .navbar-compact,
-.regRutaVuelo-page .navbar-compact {
+.regRutaVuelo-page .navbar-compact,
+.regPaqRutasVuelo-page .navbar-compact {
     padding: 0.25rem 0;
     min-height: 40px;
 }
@@ -230,6 +231,19 @@ h1.display-6 {
     text-align: center;
 }
 
+/*
+//////////////////////////////////
+////// REGISTRO PAQUETE RUTA VUELO /////////////////////
+//////////////////////////////////
+*/
+
+.regPaqRutasVuelo-page .container-fluid  {
+    padding-top: 60px; /* Espacio para que no se esconda detrás de navbar */
+}
+
+.regPaqRutasVuelo-page h1 {
+    text-align: center;
+}
 
 /* ===== Consulta de Usuario ===== */
 .consulta-usuario .sidebar{
