--- a/volandouy oficial/src/main/webapp/assets/css/styles.css
+++ b/volandouy oficial/src/main/webapp/assets/css/styles.css
@@ -44,7 +44,8 @@
 .regRutaVuelo-page .navbar-compact,
 .regPaqRutasVuelo-page .navbar-compact,
 .consultaUsuario-page .navbar-compact,
-.consultaRutasVuelo-page .navbar-compact {
+.consultaRutasVuelo-page .navbar-compact,
+.perfil-page .navbar-compact {
     padding: 0.25rem 0;
     min-height: 40px;
 }
@@ -301,3 +302,12 @@ h1.display-6 {
 .consulta-rutas main > .container { max-width: 1100px; }
 #flightsBody tr.hover-row:hover { background: rgba(13,110,253,.06); }
 
+/*
+//////////////////////////////////
+////// PERFIL /////////////////////
+//////////////////////////////////
+*/
+
+.perfil-page .container-fluid{
+  padding-top: 60px;          /* espacio para que no se esconda detrás de navbar */
+}
