Agrego sombra cuando pasas mouse por tabla

--- a/volandouy oficial/src/main/webapp/assets/css/styles.css
+++ b/volandouy oficial/src/main/webapp/assets/css/styles.css
@@ -652,4 +652,7 @@ h1.display-6 {
   .compraPaquete-page .paquete-card .btn-sm {
     width: 100%;
   }
+
+  .clickable-rows tbody tr { cursor: pointer; }
+
 }
