--- a/volandouy oficial/.settings/org.eclipse.wst.common.component
+++ b/volandouy oficial/.settings/org.eclipse.wst.common.component
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
             
     
-    <wb-module deploy-name="volandouy-oficial-0.0.1-SNAPSHOT">
+    <wb-module deploy-name="volnadouy-oficial">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
                 
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
@@ -12,9 +12,7 @@
                         
         
         <property name="java-output-path" value="/volandouy oficial/target/classes"/>
-                        
-        
-        <property name="context-root" value="volandouy-oficial"/>
+        <property name="context-root" value="volnadouy-oficial"/>
                     
     
     </wb-module>
