--- a/volandouy oficial/src/main/webapp/media/styles/styles.css
+++ b/volandouy oficial/src/main/webapp/media/styles/styles.css
@@ -669,3 +669,8 @@ h1.display-6 {
   .clickable-rows tbody tr { cursor: pointer; }
 
 }
+
+.footer_centro{
+	color: rgb(0, 0, 0) !important;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, .45);
+	}
