--- a/volandouy oficial/src/main/webapp/media/styles/styles.css
+++ b/volandouy oficial/src/main/webapp/media/styles/styles.css
@@ -675,5 +675,10 @@ h1.display-6 {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, .45);
 	}
 	
+/* El input-group ocupa todo el ancho en móvil */
+.navbar .search-bar .input-group {
+  width: 100%;
+  max-width: 100%;
+}
 
 
