--- a/AppWeb/.settings/org.eclipse.wst.common.component
+++ b/AppWeb/.settings/org.eclipse.wst.common.component
@@ -5,9 +5,13 @@
     
     
     <wb-module deploy-name="volandouy-oficial">
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <dependent-module archiveName="volandouy-oficial-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/volandouy oficial/volandouy oficial">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
                                                 
         
         
